Created assassin and fixed the equip repostiroy to match the newer finished EquipmentBonsues record