@@ -1,7 +1,8 @@
 package com.ragnarok.engine.repository;
 
 import com.ragnarok.engine.enums.Element;
-import com.ragnarok.engine.item.equip.*;
+import com.ragnarok.engine.item.defaults.EquipmentDefaults;
+import com.ragnarok.engine.item.equip.model.*;
 import com.ragnarok.engine.stat.StatBlock;
 
 import java.util.Collections;
@@ -12,56 +13,49 @@ import java.util.Map;
  * Repositorio en memoria para todos los items de equipo del juego.
  * Actúa como un catálogo centralizado y estático.
  */
+/**
+ * An in-memory repository that acts as a catalog for all available Equipment items.
+ * This serves as a single source of truth for item data, simulating a database.
+ */
 public final class EquipmentRepository {
 
     private static final Map<Long, Equipment> ITEMS;
 
     static {
-        // --- Definición de Items de Ejemplo ---
+        // --- Item Definitions ---
 
-        // 1. Cotton Shirt [1]
-        var cottonShirtBonuses = new EquipmentBonuses(
-                StatBlock.ZERO, 0, 0, 0, 2, 0, 0, 0, 0,
-                Collections.emptyMap(), Collections.emptyMap()
-        );
-        var cottonShirt = new ArmorItem(
-                1001L, "Cotton Shirt", Element.NEUTRAL, ArmorType.ARMOR,
-                cottonShirtBonuses, 1, Collections.emptyList(), 1
-        );
+        // Armor
+        var cottonShirt = new ArmorItem(1001L, "Cotton Shirt", Element.NEUTRAL, ArmorType.ARMOR, EquipmentBonuses.ZERO.withDefense(2), 1, Collections.emptyList(), 1);
+        var basicShield = new ArmorItem(1002L, "Shield", Element.NEUTRAL, ArmorType.SHIELD, EquipmentBonuses.ZERO.withDefense(1), 1, List.of("SWORDMAN"), 1);
 
-        // 2. Knife [2]
-        var knifeBonuses = new EquipmentBonuses(
-                StatBlock.ZERO, 0, 0, 10, 0, 0, 0, 0, 0,
-                Collections.emptyMap(), Collections.emptyMap()
-        );
-        var knife = new WeaponItem(
-                2001L, "Knife", Element.NEUTRAL, WeaponType.DAGGER,
-                knifeBonuses, 1, Collections.emptyList(), 2
-        );
+        // Weapons
+        var knife = new WeaponItem(2001L, "Knife", Element.NEUTRAL, WeaponType.DAGGER, EquipmentBonuses.ZERO.withAttack(10), 1, Collections.emptyList(), 2, EquipmentDefaults.STANDARD_DAGGER_COMPATIBILITY);
+        var basicSword = new WeaponItem(2002L, "Sword", Element.NEUTRAL, WeaponType.ONE_HANDED_SWORD, EquipmentBonuses.ZERO, 1, List.of("SWORDMAN"), 1, EquipmentDefaults.STANDARD_1H_SWORD_COMPATIBILITY);
+        var twoHandedSword = new WeaponItem(2003L, "Two-Handed Sword", Element.NEUTRAL, WeaponType.TWO_HANDED_SWORD, EquipmentBonuses.ZERO, 25, List.of("SWORDMAN"), 2);
+        var highLevelSword = new WeaponItem(2004L, "Blade of the Heavens", Element.HOLY, WeaponType.ONE_HANDED_SWORD, EquipmentBonuses.ZERO, 99, List.of("SWORDMAN"), 0);
+        var assassinKatar = new WeaponItem(2005L, "Katar of the Shadows", Element.POISON, WeaponType.KATAR, EquipmentBonuses.ZERO, 40, List.of("ASSASSIN"), 2);
+        var incompatibleAxe = new WeaponItem(2006L, "Battle Axe", Element.EARTH, WeaponType.ONE_HANDED_AXE, EquipmentBonuses.ZERO, 10, List.of("SWORDMAN"), 1, EquipmentDefaults.NON_COMPATIBLE);
 
-        // --- Población del Mapa ---
+
+        // --- Populate the Map ---
         ITEMS = Map.of(
                 cottonShirt.id(), cottonShirt,
-                knife.id(), knife
-                // Aquí añadiremos todos los futuros items...
+                basicShield.id(), basicShield,
+                knife.id(), knife,
+                basicSword.id(), basicSword,
+                twoHandedSword.id(), twoHandedSword,
+                highLevelSword.id(), highLevelSword,
+                assassinKatar.id(), assassinKatar,
+                incompatibleAxe.id(), incompatibleAxe
         );
     }
 
-    /**
-     * Constructor privado para prevenir la instanciación.
-     */
     private EquipmentRepository() {}
 
-    /**
-     * Busca un EquipmentItem por su ID único.
-     * @param itemId el ID del item a buscar.
-     * @return el EquipmentItem correspondiente.
-     * @throws IllegalArgumentException si no se encuentra el item.
-     */
     public static Equipment findById(long itemId) {
         Equipment item = ITEMS.get(itemId);
         if (item == null) {
-            throw new IllegalArgumentException("No se encontró ningún EquipmentItem con el ID: " + itemId);
+            throw new IllegalArgumentException("No EquipmentItem found with ID: " + itemId);
         }
         return item;
     }
@@ -79,7 +73,6 @@ public final class EquipmentRepository {
                 .map(EquipmentRepository::findById)
                 .toList();
     }
-
 }
 
 //EJEMPLO DE USO PARA EL FUTURO
